agregar imagenes correctas

--- a/Grupo Protekta/tooplate-titan-style.css
+++ b/Grupo Protekta/tooplate-titan-style.css
@@ -619,7 +619,7 @@ section {
     width: 250px;
     height: 250px;
     border-radius: 50%;
-    background-image: url('images/about-profile.jpg');
+    background-image: url('images/GrupoProtektaInformacion.jpg');
     background-size: cover;
     background-position: center;
     box-shadow: 0 15px 40px rgba(0, 0, 0, 0.3);
@@ -1300,15 +1300,19 @@ section {
 
 /* Specific portfolio images */
 .portfolio-image.ecommerce {
-    background-image: url('images/portfolio-ecommerce.jpg');
+    background-image: url('images/VIGILANCIA PRIVADA.jpg');
 }
 
 .portfolio-image.analytics {
-    background-image: url('images/portfolio-analytics.jpg');
+    background-image: url('images/LIMPIEZA Y SANEAMIENTO.jpg');
 }
 
 .portfolio-image.music {
-    background-image: url('images/portfolio-music.jpg');
+    background-image: url('Asistente de Accesos en edificios y condominios.jpg');
+}
+
+.portfolio-image.GESTION {
+    background-image: url('Asistente de Accesos en edificios y condominios.jpg');
 }
 
 .portfolio-content {
