--- a/tooplate-titan-style.css
+++ b/tooplate-titan-style.css
@@ -1332,11 +1332,11 @@ section {
 }
 
 .portfolio-image.music {
-    background-image: url('Asistente de Accesos en edificios y condominios.jpg');
+    background-image: url('images/Asistente de Accesos en edificios y condominios.jpg');
 }
 
 .portfolio-image.GESTION {
-    background-image: url('Gestión y Administración de Estacionamientos.jpg');
+    background-image: url('images/Gestión y Administración de Estacionamientos.jpg');
 }
 
 .portfolio-content {
