--- a/tooplate-titan-style.css
+++ b/tooplate-titan-style.css
@@ -1324,19 +1324,19 @@ section {
 
 /* Specific portfolio images */
 .portfolio-image.ecommerce {
-    background-image: url('images/VIGILANCIA PRIVADA.jpg');
+    background-image: url('images/vigilancia-privada.jpg');
 }
 
 .portfolio-image.analytics {
-    background-image: url('images/LIMPIEZA Y SANEAMIENTO.jpg');
+    background-image: url('images/limpieza-saneamiento.jpg');
 }
 
 .portfolio-image.music {
-    background-image: url('images/Asistente de Accesos en edificios y condominios.jpg');
+    background-image: url('images/asistente-accesos.jpg');
 }
 
 .portfolio-image.GESTION {
-    background-image: url('images/Gestión y Administración de Estacionamientos.jpg');
+    background-image: url('images/gestion-estacionamientos.jpg');
 }
 
 .portfolio-content {
